--- a/public/lessons-content/phishing.html
+++ b/public/lessons-content/phishing.html
@@ -1,67 +1,3 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Les Différentes Formes de Phishing</title>
-    <!-- Assurez-vous d'inclure Font Awesome pour les icônes -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        /* Styles de base pour la présentation, similaires à l'exemple */
-        body {
-            font-family: sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        .content-block {
-            background: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        h2 {
-            color: #0056b3;
-            border-bottom: 2px solid #0056b3;
-            padding-bottom: 10px;
-        }
-        h3 {
-            color: #004085;
-        }
-        .nav-button {
-            display: inline-block;
-            background-color: #007bff;
-            color: white;
-            padding: 10px 15px;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-        .prev-button {
-            background-color: #6c757d;
-        }
-        .content-navigation {
-            text-align: center;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
-
 <section class="content-block">
     <h2><i class="fas fa-question-circle" aria-hidden="true"></i>Qu'est-ce que le Phishing ?</h2>
     <p>
@@ -170,6 +106,10 @@
         <li><strong>Méfiez-vous de l'urgence :</strong> Les attaquants créent un sentiment de pression pour vous faire agir sans réfléchir. Prenez toujours le temps de la réflexion avant une action importante comme un virement.</li>
         <li><strong>Évaluez le contexte :</strong> Si vous recevez une notification pour un colis alors que vous n'avez rien commandé, c'est un signal d'alerte évident.</li>
     </ul>
+</section>
+
+<section>
+    <p>Auteur/Date</p>
 </section>
 
 <nav class="content-navigation">
