--- a/public/lessons-content/phishing.html
+++ b/public/lessons-content/phishing.html
@@ -108,8 +108,13 @@
     </ul>
 </section>
 
-<section>
-    <p>Auteur/Date</p>
+<section class="content-block">
+    <h2><i class="fas fa-info-circle" aria-hidden="true"></i>Informations sur le document original</h2>
+    <p>
+        <b>Titre :</b> Phishing<br>
+        <b>Auteurs :</b> Lilian Faure<br>
+        <b>Date de publication :</b> 11 février 2025
+    </p>
 </section>
 
 <nav class="content-navigation">
