--- a/public/lessons-content/security-phishing.html
+++ b/public/lessons-content/security-phishing.html
@@ -1,6 +1,6 @@
 <section class="content-block">
     <h2 class="flex items-center">
-        <i class="fas fa-info-circle mr-3 text-2xl" aria-hidden="true"></i>Introduction
+        <i class="fas fa-info-circle" aria-hidden="true"></i>Introduction
     </h2>
     <p>
         Le phishing, ou hameçonnage, est une des menaces de cybersécurité les plus répandues et les plus efficaces. Cette méthode d'attaque repose sur la manipulation psychologique pour inciter les individus à révéler des informations personnelles ou financières. Les cybercriminels se font passer pour des entités de confiance (banques, services de livraison, administrations, ou même des proches) afin de tromper leurs victimes.
@@ -14,7 +14,7 @@
 </section>
 <section class="content-block">
     <h2 class="flex items-center">
-        <i class="fas fa-list mr-3 text-2xl" aria-hidden="true"></i>Types de Phishing
+        <i class="fas fa-list" aria-hidden="true"></i>Types de Phishing
     </h2>
     <p>
         Le phishing ne se limite pas à la simple fraude par e-mail. Les attaquants adaptent leurs techniques à de nombreux canaux de communication.
@@ -37,7 +37,7 @@
     </p>
     <h3>Spear Phishing et Whaling (hameçonnage ciblé)</h3>
     <p>
-        Ces attaques sont beaucoup plus précises et personnalisées. Le **spear phishing** cible une personne ou un groupe spécifique avec des informations les concernant (nom, employeur, loisirs, etc.), rendant le message plus crédible. Le **whaling** (chasse à la baleine) est une forme de spear phishing qui s'attaque spécifiquement aux dirigeants ou cadres supérieurs d'une entreprise (CEO, CFO). Les fraudeurs se font passer pour des partenaires commerciaux ou des employés pour obtenir des informations confidentielles ou demander le transfert de fonds importants.
+        Ces attaques sont beaucoup plus précises et personnalisées. Le spear phishing cible une personne ou un groupe spécifique avec des informations les concernant (nom, employeur, loisirs, etc.), rendant le message plus crédible. Le whaling (chasse à la baleine) est une forme de spear phishing qui s'attaque spécifiquement aux dirigeants ou cadres supérieurs d'une entreprise. Les fraudeurs se font passer pour des partenaires commerciaux ou des employés pour obtenir des informations confidentielles ou demander le transfert de fonds importants.
     </p>
     <h3>Pharming</h3>
     <p>
@@ -46,7 +46,7 @@
 </section>
 <section class="content-block">
     <h2 class="flex items-center">
-        <i class="fas fa-eye mr-3 text-2xl" aria-hidden="true"></i>Reconnaître une tentative de Phishing
+        <i class="fas fa-eye" aria-hidden="true"></i>Reconnaître une tentative de Phishing
     </h2>
     <p>
         Malgré la sophistication croissante des attaques, plusieurs indicateurs permettent d'identifier les tentatives d'hameçonnage.
@@ -70,7 +70,7 @@
 </section>
 <section class="content-block">
     <h2 class="flex items-center">
-        <i class="fas fa-shield-alt mr-3 text-2xl" aria-hidden="true"></i>Comment réagir face à une tentative de Phishing
+        <i class="fas fa-shield-alt" aria-hidden="true"></i>Comment réagir face à une tentative de Phishing
     </h2>
     <p>
         Une fois une tentative de phishing identifiée, une réaction appropriée est cruciale pour garantir votre sécurité.
@@ -87,7 +87,7 @@
 </section>
 <section class="content-block">
     <h2 class="flex items-center">
-        <i class="fas fa-flag-checkered mr-3 text-2xl" aria-hidden="true"></i>Conclusion
+        <i class="fas fa-flag-checkered" aria-hidden="true"></i>Conclusion
     </h2>
     <p>
         La vigilance est la meilleure alliée contre le phishing. Une approche de sécurité proactive et une certaine méfiance sont les premières lignes de défense.
