--- a/public/lessons-content/security-phishing.html
+++ b/public/lessons-content/security-phishing.html
@@ -23,11 +23,11 @@
     <p>
         Il s'agit de la forme d'hameçonnage la plus ancienne et la plus fréquente. Les e-mails de phishing imitent souvent de manière convaincante les communications d'entreprises légitimes (banques, plateformes de commerce électronique, services de streaming). Un message typique peut informer l'utilisateur d'une activité de compte suspecte, d'une mise à jour de sécurité requise, ou d'une offre irrésistible, le tout pour inciter à une action immédiate. Ces e-mails contiennent un lien malveillant ou une pièce jointe compromise.
     </p>
-    <h3>Smishing (Phishing par SMS)</h3>
+    <h3>Smishing (phishing par SMS)</h3>
     <p>
         Le smishing utilise les messages texte (SMS) pour des attaques ciblées. Les messages sont généralement courts et directs, créant un sentiment d'urgence. Ils peuvent, par exemple, informer le destinataire d'une livraison en attente, d'un problème avec un compte, ou d'une opportunité de gain. Le message inclut un lien raccourci menant à un site frauduleux. Le smishing exploite la propension des utilisateurs à faire confiance aux messages directs et à agir rapidement depuis leur téléphone mobile.
     </p>
-    <h3>Vishing (Phishing Vocal)</h3>
+    <h3>Vishing (phishing vocal)</h3>
     <p>
         Le vishing se déroule par téléphone. Les fraudeurs se font passer pour des employés de services légitimes, tels que des banques, des services de support technique ou des agences gouvernementales. Ils tentent de soutirer des informations sensibles en prétextant un problème technique, une transaction frauduleuse, ou en demandant de valider des informations personnelles. Ces attaques misent sur le sentiment d'urgence et la pression psychologique pour contourner la vigilance des victimes.
     </p>
@@ -35,7 +35,7 @@
     <p>
         Les cybercriminels peuvent compromettre des comptes d'amis ou de connaissances et envoyer des messages à leurs contacts. Ces messages peuvent contenir des liens malveillants, des demandes d'argent, ou des propositions de collaboration à des sondages ou des jeux qui collectent des informations personnelles. La confiance que l'on accorde à l'expéditeur rend ce type d'attaque particulièrement insidieux.
     </p>
-    <h3>Spear Phishing et Whaling (hameçonnage ciblé)</h3>
+    <h3>Spear phishing et whaling (hameçonnage ciblé)</h3>
     <p>
         Ces attaques sont beaucoup plus précises et personnalisées. Le spear phishing cible une personne ou un groupe spécifique avec des informations les concernant (nom, employeur, loisirs, etc.), rendant le message plus crédible. Le whaling (chasse à la baleine) est une forme de spear phishing qui s'attaque spécifiquement aux dirigeants ou cadres supérieurs d'une entreprise. Les fraudeurs se font passer pour des partenaires commerciaux ou des employés pour obtenir des informations confidentielles ou demander le transfert de fonds importants.
     </p>
