--- a/public/lessons-content/security-phishing.html
+++ b/public/lessons-content/security-phishing.html
@@ -118,4 +118,7 @@ https://login-mabanque-fr.xyz/auth/p/12948</code></pre>
         <li><strong>Activer le 2FA :</strong> C'est une protection essentielle pour vos comptes les plus sensibles.</li>
         <li><strong>Maintenir ses logiciels à jour :</strong> Les mises à jour corrigent les vulnérabilités exploitées par des techniques comme le pharming.</li>
     </ul>
+    <p>
+        Leçon créée par Hugo Bruchon.
+    </p>
 </section>
