--- a/public/lessons-content/security-phishing.html
+++ b/public/lessons-content/security-phishing.html
@@ -1,6 +1,6 @@
 <section class="content-block">
     <h2 class="flex items-center">
-        <i class="fas fa-info-circle" aria-hidden="true"></i> Introduction
+        <i class="fas fa-info-circle" aria-hidden="true"></i> Généralités
     </h2>
     <p>
         Le phishing, ou hameçonnage, est une des menaces de cybersécurité les plus répandues et les plus efficaces. Cette méthode d'attaque repose sur la manipulation psychologique pour inciter les individus à révéler des informations personnelles ou financières. Les cybercriminels se font passer pour des entités de confiance (banques, services de livraison, administrations, ou même des proches) afin de tromper leurs victimes.
@@ -9,7 +9,7 @@
         L'objectif du phishing est de dérober des informations sensibles telles que les mots de passe, les numéros de cartes de crédit, ou d'installer des logiciels malveillants (<code>malwares</code>). Les conséquences d'une attaque réussie peuvent être sévères : vol d'identité, pertes financières et compromission de comptes en ligne.
     </p>
     <p>
-        Comprendre les mécanismes du phishing et savoir identifier ses signes distinctifs est une compétence essentielle dans un monde de plus en plus connecté. Cette leçon a pour but de fournir une vue d'ensemble des différents types d'attaques et de présenter les mesures concrètes pour s'en prémunir.
+        Comprendre les mécanismes du phishing et savoir identifier ses signes distinctifs est une compétence essentielle dans un monde de plus en plus connecté.
     </p>
 </section>
 
