--- a/public/lessons-content/security-phishing.html
+++ b/public/lessons-content/security-phishing.html
@@ -1,6 +1,6 @@
 <section class="content-block">
     <h2 class="flex items-center">
-        <i class="fas fa-info-circle" aria-hidden="true"></i> Généralités
+        <i class="fas fa-info-circle" aria-hidden="true"></i> Généralités sur le phishing
     </h2>
     <p>
         Le phishing, ou hameçonnage, est une des menaces de cybersécurité les plus répandues et les plus efficaces. Cette méthode d'attaque repose sur la manipulation psychologique pour inciter les individus à révéler des informations personnelles ou financières. Les cybercriminels se font passer pour des entités de confiance (banques, services de livraison, administrations, ou même des proches) afin de tromper leurs victimes.
