--- a/public/challenges-content/security-sneaky-phishing.html
+++ b/public/challenges-content/security-sneaky-phishing.html
@@ -57,4 +57,7 @@
      <p>
         <strong>Flag :</strong> Pour valider ce challenge, le flag à soumettre est le nom de domaine frauduleux (sans `http://` ni la suite du chemin).
     </p>
+    <p>
+        Challenge créé par Hugo Bruchon.
+    </p>
 </section>
